ResponseOfReadPayRequestList 코드 간결하게 수정